Hide feeds-masonry on tablet/mobile.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -281,6 +281,9 @@
   #notif-btn {
     display: none;
   }
+  #feeds-masonry {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 320px) {
