Add tag list to search result.

--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -3,6 +3,7 @@
 {% block search_content %}
   {% if paginator.getCurrentPageResults|length > 0 and app.request.query.get('q') != '' %}
     <div class="masonry jscroll">
+      {% include 'AdstacyAppBundle:App:feeds.html.twig' %}
       {{ block('ajax_content') }}
     </div>
   {% else %}
