fix lazyload threshold loading.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -32,9 +32,8 @@ body {
 .next-page {
   position: absolute;
   bottom: -50px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
   border-bottom: 0;
+  .border-bottom-radius(0);
 }
 
 .follow-action .btn-success:hover,
