Add username to show ad user's comment.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -128,6 +128,12 @@
     }
 
     & > small {
+      color: #aaa;
+      font-size: 14px;
+    }
+
+    & > time {
+      color: #aaa;
       font-size: 12px;
     }
   }
