--- a/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/explore.html.twig
@@ -19,7 +19,7 @@
     {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
   {% if ads|length >= max_ads_per_page %}
-    <a href="{{ path('adstacy_app_explore', {'id': id}) }}" class="btn btn-default btn-block next-page">{{ "more"|trans }}</a>
+    <a href="{{ path('adstacy_app_explore', {'id': id}) }}" class="btn btn-default btn-block load-next next-page">{{ "more"|trans }}</a>
   {% endif %}
 {% endblock %}
 
@@ -28,6 +28,7 @@
   <script type="text/javascript">
     $(function() {
       $('.jscroll').jscroll({
+        loadingHtml: '<a class="btn btn-default btn-block load-next"><img src="{{ asset('bundles/adstacyapp/img/spinner.gif') }}"> {{ "more"|trans }}</a>',
         nextSelector: 'a.next-page',
         callback: function() {
           var $ads = $('.jscroll-added:last .advert');
