--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -37,7 +37,7 @@
     {% endfor %}
     {% if paginator.hasNextPage %}
       {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
-      <a href="{{ path('adstacy_app_stream', params )}}" class="btn btn-lg btn-default btn-block next-page">{{"more"|trans}}</a>
+      <a href="{{ path('adstacy_app_stream', params )}}" class="btn btn-lg btn-default btn-block load-next next-page">{{"more"|trans}}</a>
     {% endif %}
   {% endif %}
 {% endblock %}
@@ -47,7 +47,6 @@
   <script type="text/javascript">
     $(function() {
       $('.jscroll').jscroll({
-        nextSelector: 'a.next-page',
         callback: function() {
           var $ads = $('.jscroll-added:last .advert');
           $('.masonry').masonry('appended', $ads);
