--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -20,7 +20,7 @@
   {% endfor %}
   {% if paginator.hasNextPage %}
     {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
-    <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-default btn-lg btn-block next-page">{{"more"|trans}}</a>
+    <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-default btn-lg btn-block load-next next-page">{{"more"|trans}}</a>
   {% endif %}
 {% endblock %}
 
@@ -29,7 +29,6 @@
   <script type="text/javascript">
     $(function() {
       $('.jscroll').jscroll({
-        nextSelector: 'a.next-page',
         callback: function(a, b) {
           var $ads = $('.jscroll-added:last .advert');
           $('.masonry').masonry('appended', $ads);
