--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -34,7 +34,7 @@
   {% endfor %}
   {% if paginator.hasNextPage %}
     {% set params = app.request.query.all|merge({username: user.username, page: paginator.getNextPage}) %}
-    <a href="{{ path(route, params )}}" class="btn btn-default btn-lg btn-block next-page">More</a>
+    <a href="{{ path(route, params )}}" class="btn btn-default btn-lg btn-block load-next next-page">More</a>
   {% endif %}
 {% endblock %}
 
@@ -44,7 +44,6 @@
     $(function() {
       $('.user-thumb').ajaxlink('follow_user');
       $('.jscroll').jscroll({
-        nextSelector: 'a.next-page',
         callback: function(a, b) {
           var $users = $('.jscroll-added:last .user');
           $('.masonry').masonry('appended', $users);
