--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-#show-ad {
+#show-advert {
   position: relative;
   width: 1000px;
   margin: 14px auto;
@@ -16,7 +16,7 @@
   }
 }
 
-#show-ad-content {
+#show-advert-content {
   width: 750px;
   float: left;
 
@@ -29,7 +29,7 @@
   }
 }
 
-#show-ad-toolbar {
+#show-advert-toolbar {
   .btn-group > .btn-promote {
     margin-left: 0;
     margin-right: 1px;
@@ -56,7 +56,7 @@
 }
 
 
-#show-ad-img {
+#show-advert-img {
   text-align: center;
 
   img {
@@ -64,7 +64,7 @@
   }
 }
 
-#show-ad-owner {
+#show-advert-owner {
   width: 236px;
   margin-left: 14px;
   float: left;
@@ -105,12 +105,12 @@
   }
 }
 
-#show-ad-long-desc {
+#show-advert-long-desc {
   width: 750px;
   overflow-y: auto;
 }
 
-#show-ad-comment {
+#show-advert-comment {
   form {
     margin-top: 10px;
   }
@@ -159,22 +159,22 @@
     border-radius: 0;
   }
 
-  #show-ad, #show-ad-content, #show-ad-long-desc {
+  #show-advert, #show-advert-content, #show-advert-long-desc {
     width: 100% !important;
   }
 
-  #show-ad-owner {
+  #show-advert-owner {
     display: none;
   }
 
-  #show-ad-long-desc {
+  #show-advert-long-desc {
     img {
       margin-bottom: 10px;
       max-width: 100%;
     }
   }
 
-  #show-ad-toolbar {
+  #show-advert-toolbar {
     .social-label, .owner-action-label {
       display: none;
     }
@@ -182,7 +182,7 @@
 }
 
 @media screen and (max-width: 240px) {
-  #show-ad-toolbar {
+  #show-advert-toolbar {
     text-align: center;
     .owner-action {
       display: block;
