fix uitotop bug when resize.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -86,7 +86,11 @@ a.mention {
   }
 }
 
-@media screen and (max-width: @screen-phone) {
+@media screen and (max-width: 499px) {
+  #toTop {
+    display: none !important;
+  }
+
   .panel {
     border-radius: 0;
   }
