change ad convention to advert.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../bootstrap/mixins.less";
 
-#create-ad {
+#create-advert {
   margin: 14px auto;
   width: 800px;
 
@@ -9,7 +9,7 @@
     color: #555;
   }
 
-  #create-ad-desc, #create-ad-content {
+  #create-advert-desc, #create-advert-content {
     margin: 10px 0;
   }
 
@@ -33,7 +33,7 @@
   color: #aaa;
 }
 
-#create-ad-image {
+#create-advert-image {
   overflow: hidden;
   width: 100%;
 
@@ -68,7 +68,7 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #create-ad {
+  #create-advert {
     width: 100%;
 
     .image-preview.medium img {
@@ -76,14 +76,14 @@
     }
   }
 
-  #create-ad-image {
+  #create-advert-image {
     width: 100%;
     float: none;
     border: 0;
     min-height: 0;
   }
 
-  #show-long-desc-btn, #create-ad-content {
+  #show-long-desc-btn, #create-advert-content {
     display: none;
   }
 }
