--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -21,7 +21,7 @@
     width: 105px;
   }
 
-  .user-mini-ad {
+  .user-mini-advert {
     float: left;
     width: 47px;
     height: 50px;
@@ -136,7 +136,7 @@
   .score:hover {
     color: #b00;
     text-decoration: none;
-    
+
     b {
       color: #b00;
     }
