--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -20,16 +20,16 @@
 
 {% block content %}
   {% set data = form.vars.data %}
-  <div id="create-ad" class="panel panel-default">
+  <div id="create-advert" class="panel panel-default">
     <div class="panel-body clearfix">
       {{ form_start(form, {attr: {class: 'submit-disable'}}) }}
       {{ form_errors(form) }}
       {{ form_label(form.image) }}
-      <div id="create-ad-image">
+      <div id="create-advert-image">
         {{ form_widget(form.image) }}
       </div>
 
-      <div id="create-ad-desc">
+      <div id="create-advert-desc">
         <div class="clearfix">
           {{ form_label(form.description) }}
           <span class="help">({{"form_ad.helps.description"|trans}})</span>
@@ -43,7 +43,7 @@
         </div>
 
         <button id="show-long-desc-btn" type="button" class="btn btn-info btn-block">{{"form_ad.content_trigger"|trans}}</button>
-        <div id="create-ad-content" {% if not data.content %}class="hide"{% endif %}>
+        <div id="create-advert-content" {% if not data.content %}class="hide"{% endif %}>
           {{ form_widget(form.content) }}
         </div>
 
@@ -93,7 +93,7 @@
   <script type="text/javascript">
     $(function() {
       var $trigger = $('#show-long-desc-btn');
-      var $content = $('#create-ad-content');
+      var $content = $('#create-advert-content');
       var $charsLeft = $('#chars-left');
       var $desc = $('#{{ form.description.vars.id }}');
       $trigger.click(function() {
