--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -7,7 +7,7 @@
     <div class="user-ads clearfix">
       {% set ads = user.ads %}
       {% for i in 0..3 %}
-        <div class="user-mini-ad">
+        <div class="user-mini-advert">
           {% if ads[i] is defined %}
             {% set ad = ads[i] %}
             <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
