--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -153,11 +153,11 @@
   background: url("../img/logo.png") no-repeat center;
 }
 
-#create-ads-btn {
+#create-advert-btn {
   margin-right: 5px;
 }
 
-#create-ads-mobile-btn {
+#create-advert-mobile-btn {
   display: none;
 }
 
@@ -166,7 +166,7 @@
 }
 
 /** Hide header mobile components **/
-#mobile-create-ads-label {
+#create-advert-mobile-label {
   display: none;
 }
 
@@ -217,7 +217,7 @@
   #mobile-login-link {
     display: block;
   }
-  #mobile-create-ads-label {
+  #create-advert-mobile-label {
     display: inline;
   }
   #mobile-nav {
@@ -258,26 +258,26 @@
   #search-form .btn-search {
     left: 10px;
   }
-  #create-ads-btn {
+  #create-advert-btn {
     display: block;
     margin-right: 0;
   }
 }
 
 @media screen and (max-width: 767px) {
-  #create-ads-mobile-btn,
+  #create-advert-mobile-btn,
   #notif-mobile-btn {
     position: relative;
     display: inline;
     float: right;
   }
-  #create-ads-mobile-btn {
+  #create-advert-mobile-btn {
     margin-right: 10px;
   }
   #notif-mobile-btn {
     margin-right: 15px;
   }
-  #create-ads-btn,
+  #create-advert-btn,
   #notif-btn {
     display: none;
   }
