--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -16,7 +16,7 @@
     }
   }
 
-  .user-ads {
+  .user-adverts {
     float: right;
     width: 105px;
   }
@@ -188,13 +188,13 @@
     padding: 0;
     margin: 14px 0 0;
     height: auto;
-    .user-realname, .profile-picture, .user-ads, .user-score {
+    .user-realname, .profile-picture, .user-adverts, .user-score {
       text-align: center;
     }
-    .profile-picture, .user-ads {
+    .profile-picture, .user-adverts {
       float: none;
     }
-    .user-ads {
+    .user-adverts {
       width: 210px;
       margin: 0 auto;
     }
