--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -4,7 +4,7 @@
     <div class="profile-picture">
       <img src="{{ profile_pic(user) }}" width="105" height="105">
     </div>
-    <div class="user-ads clearfix">
+    <div class="user-adverts clearfix">
       {% set ads = user.ads %}
       {% for i in 0..3 %}
         <div class="user-mini-advert">
