Use a element on notification.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -19,42 +19,16 @@
   display: block;
 }
 
-#top-notifications {
-  font-size: 12px;
-  width: 400px;
-
-  > li {
+.notifications {
+  li {
     border-top: 1px solid #ddd;
-    padding: 5px;
+    padding: 0;
   }
-
-  > li:first-child {
+  li:first-child {
     border-top: 0;
   }
 
-  > li:hover {
-    background-color: #eee;
-    cursor: pointer;
-  }
-
-  .notification {
-    float: left;
-    width: 300px;
-  }
-
-  time {
-    color: #bbb;
-    font-size: 11px;
-    float: left;
-  }
-
-  .notif-pic {
-    float: left;
-    margin-right: 10px;
-    height: 51px;
-  }
-
-  .no-new-notifications {
+  li.no-new-notifications {
     color: #ccc;
     font-size: 14px;
     padding: 10px 15px;
@@ -62,52 +36,65 @@
   }
 }
 
-#notifications {
+.dropdown-menu > li > a:hover {
+    text-decoration: none;
+    color: #333;
+    background-color: #eee;
+}
+
+.notification {
   display: block;
-  margin-top: 20px;
+  text-decoration: none;
+  padding: 10px 5px;
+  color: #999;
+  &:hover {
+    text-decoration: none;
+    color: #333;
+    background-color: #eee;
+  }
+  .username, .notif-comment {
+    color: #444;
+  }
+  .notif-pic {
+    float: left;
+    margin-right: 10px;
+  }
+  span.time {
+    color: #bbb;
+    font-size: 11px;
+    float: left;
+  }
+}
+
+#top-notifications {
+  font-size: 12px;
+  width: 400px;
+
+  .notif-pic {
+    height: 51px;
+  }
 }
 
 #show-all-notifications {
   background-color: #f5f5f5;
   text-align: center;
-  a {
-    color: #999;
-    font-weight: bold;
-    padding: 0;
-    border: 0;
-  }
-  a:hover {
-    background-color: #eee;
+  .notification {
+    display: block;
+    padding: 5px;
   }
 }
 
 #all-notifications {
-  > li:hover {
-    background-color: #eee;
-    cursor: pointer;
-  }
-  .notification {
-    float: left;
-  }
-
-  time {
-    color: #bbb;
+  span.time {
     font-size: 12px;
-    float: left;
     margin-right: 10px;
   }
 
   .notif-pic {
-    float: left;
-    margin-right: 10px;
     height: 18px;
   }
-
-  .no-new-notifications {
-    color: #ccc;
-    font-size: 14px;
-    padding: 10px 15px;
-    text-align: center;
+  .notification:hover {
+    color: #999;
   }
 }
 
@@ -133,8 +120,6 @@
     }
 
     .notification {
-      display: block;
-      margin-top: 10px;
       width: 100%;
     }
   }
