--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -30,6 +30,9 @@
 }
 
 #show-advert-toolbar {
+  &.panel-body {
+    border: 0;
+  }
   .btn-group > .btn-promote {
     margin-left: 0;
     margin-right: 1px;
