--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -62,7 +62,7 @@
           </a>
           {% if app.user == user %}
             <div class="owner-action btn-group btn-group-sm pull-right">
-              <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-default"><i class="icon-edit"></i><span class="owner-action-label">{{ "edit"|trans }}</span></a>
+              <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-success"><i class="icon-edit"></i><span class="owner-action-label">{{ "edit"|trans }}</span></a>
               <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary"><i class="icon-delete"></i><span class="owner-action-label">{{ "delete"|trans }}</span></a>
             </div>
           {% endif %}
