Responsive show-ad-owner

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -164,10 +164,20 @@
 
   #show-advert, #show-advert-content, #show-advert-long-desc {
     width: 100% !important;
+    float: none;
   }
 
   #show-advert-owner {
-    display: none;
+    position: static;
+    float: none;
+    width: 100%;
+    margin: 0;
+    margin-top: 10px;
+  }
+
+  #user-latest-adverts {
+    width: 100%;
+    text-align: center;
   }
 
   #show-advert-long-desc {
