Add autocomplete mention.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,7 @@
         'bundles/adstacyapp/less/adstacy.less'
         'bundles/adstacyapp/css/ui.totop.css'
         'bundles/adstacyapp/css/social-buttons.css'
+        'bundles/adstacyapp/css/mention.css'
         'bundles/adstacyapp/css/adstacy.css'
       %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
@@ -50,6 +51,8 @@
         '@AdstacyAppBundle/Resources/public/js/jquery.ui.totop.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
+        '@AdstacyAppBundle/Resources/public/js/bootstrap-typeahead.js'
+        '@AdstacyAppBundle/Resources/public/js/mention.js'
         '@AdstacyAppBundle/Resources/public/js/module/ajaxlink.js'
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
