--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -3,6 +3,7 @@ body {
   font-size: 13px;
   padding-top: 82px;
   background-color: #dfdfdf;
+  margin-bottom: 50px;
 }
 
 /** Class components **/
