--- a/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/trending.html.twig
@@ -14,6 +14,6 @@
 
 {% block ajax_content %}
   {% for ad in ads %}
-    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad[0]} %}
+    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
 {% endblock %}
