body now load after doc ready.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,7 +67,7 @@
       </script>
     {% endif %}
   </head>
-  <body>
+  <body class="body-loading">
     {% block body %}
       {% block header %}
         {% include '::header.html.twig' %}
